packages/svelte/tests/validator/samples/svelte-component-deprecated/input.svelte
<svelte:options runes />

<script>
	import A from './A.svelte';
</script>

<svelte:component this={A} />
