packages/svelte/tests/compiler-errors/samples/svelte-internal-import/main.svelte
<svelte:options runes={true} />

<script>
    import { something } from 'svelte/internal/client';
</script>